--- a/formDiscussion.html
+++ b/formDiscussion.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         .header {
-            color: #36A0FF;
+            color: #3600FF;
             font-size: 27px;
             padding: 10px;
         }
