--- a/formDiscussion.html
+++ b/formDiscussion.html
@@ -43,40 +43,40 @@
         <div class="form-group">
             <span><i class="fa fa-user bigicon"></i></span>
             <div>
-                <input id="fname" name="name" type="text" placeholder="First Name" class="form-control">
+                <input id="fname" aria-label="first name" name="name" type="text" placeholder="First Name" class="form-control">
             </div>
         </div>
         <div class="form-group">
             <span><i class="fa fa-user bigicon"></i></span>
             <div>
-                <input id="lname" name="name" type="text" placeholder="Last Name" class="form-control">
+                <input id="lname" aria-label="last name" name="name" type="text" placeholder="Last Name" class="form-control">
             </div>
         </div>
 
         <div class="form-group">
             <span><i class="fa fa-paper-plane bigicon"></i></span>
             <div>
-                <input id="email" name="email" type="text" placeholder="Email Address" class="form-control">
+                <input id="email" aria-label="email" name="email" type="text" placeholder="Email Address" class="form-control">
             </div>
         </div>
 
         <div class="form-group">
             <span><i class="fa fa-phone-square bigicon"></i></span>
             <div>
-                <input id="phone" name="phone" type="text" placeholder="Phone" class="form-control">
+                <input id="phone" aria-label="phone number" name="phone" type="text" placeholder="Phone" class="form-control">
             </div>
         </div>
 
         <div class="form-group">
             <span><i class = "fas fa-pencil-alt bigicon"></i></span>
             <div>
-                <textarea class="form-control" id="message" name="message" placeholder="Enter your massage for us here. We will get back to you within 2 business days."></textarea>
+                <textarea class="form-control" id="message" aria-label="message" name="message" placeholder="Enter your massage for us here. We will get back to you within 2 business days."></textarea>
             </div>
         </div>
 
         <div class="form-group">
             <div>
-                <button type="submit" class="btn btn-primary btn-lg">Submit</button>
+                <button type="submit" aria-label="submit" class="btn btn-primary btn-lg">Submit</button>
             </div>
         </div>
     </fieldset>
